[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Herbalist/appleTree.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Herbalist/apple.png" type="Texture" id=2]
[ext_resource path="res://scripts/AppleTree.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 226, 212 )

[node name="AppleTree" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Apples" type="Node2D" parent="."]

[node name="1" type="Sprite" parent="Apples"]
position = Vector2( -64.7615, 14.0001 )
scale = Vector2( 0.0794712, 0.0794712 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Apples/1"]
wait_time = 20.0

[node name="2" type="Sprite" parent="Apples"]
position = Vector2( 131.238, -13.9999 )
scale = Vector2( 0.0794712, 0.0794712 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Apples/2"]
wait_time = 20.0

[node name="3" type="Sprite" parent="Apples"]
position = Vector2( 108.238, -50.9999 )
scale = Vector2( 0.0794712, 0.0794712 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Apples/3"]
wait_time = 20.0

[node name="4" type="Sprite" parent="Apples"]
position = Vector2( -106.762, -29.9999 )
scale = Vector2( 0.0794712, 0.0794712 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Apples/4"]
wait_time = 20.0

[node name="5" type="Sprite" parent="Apples"]
position = Vector2( -48.7615, 81.0001 )
scale = Vector2( 0.0794712, 0.0794712 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Apples/5"]
wait_time = 20.0

[node name="6" type="Sprite" parent="Apples"]
position = Vector2( 99.2385, 57.0001 )
scale = Vector2( 0.0794712, 0.0794712 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Apples/6"]
wait_time = 20.0

[node name="7" type="Sprite" parent="Apples"]
position = Vector2( -101.762, -101 )
scale = Vector2( 0.0794712, 0.0794712 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Apples/7"]
wait_time = 20.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.427184, 0.427184 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2( 0.427184, 0.427184 )
polygon = PoolVector2Array( -95, -355.8, -95, -354.4, -80, -338.3, -80, -332.4, -73, -326.4, -73, -324, -70, -318, -70, -315.4, -70.8, -306.5, -68.3, -306.5, -63.4, -302.6, -57, -305.7, -57, -302, -55, -298, -51.6, -305.4, -59, -318, -59, -320.9, -55.4, -330.5, -53.6, -330.5, -50.1, -332.8, -48, -331.7, -48, -330.2, -39, -320.3, -39, -311.3, -40.5, -304.5, -39.9, -304.5, -25.6, -281.7, -21.1, -289.9, -25.3, -295.2, -24.3, -297.5, -22.7, -297.5, -16, -302.5, -16, -317.5, -13.6, -317.5, -4.10001, -323.8, -2, -322.7, -2, -321, 2, -314, 2, -311.8, -9, -296.8, -4.39999, -279.5, -7.10001, -279.5, -12.1, -273.5, -15.5, -273.5, -18, -272.2, -18, -264.5, -22, -261.5, -22, -259.1, -27, -248.1, -25.3, -239.4, -17, -233.5, -17, -229, -15, -225, -15, -217.2, -19.4, -204.7, -16.2, -201.5, -15.5, -201.5, -11, -203.7, -11, -200.2, -8.29999, -196.3, -6.60001, -204.5, -4.79999, -204.5, -0.799988, -208.5, 2.60001, -208.5, 9.60001, -226.5, 11.1, -226.5, 16.1, -232.5, 18.9, -232.5, 29, -235.1, 29, -232.8, 34, -230.5, 34, -231.2, 32.2, -236.5, 35.2, -236.5, 38.2, -239.5, 50, -239.5, 50, -237, 53.3, -231.5, 52.2, -229.5, 50.7, -229.5, 43, -223.5, 43, -221.2, 48.4, -214.8, 47.3, -212.5, 46.1, -212.5, 39, -200, 39, -183.5, 39.8, -183.5, 47, -184.3, 47, -195.3, 51.2, -199.5, 53.5, -199.5, 55, -198.7, 55, -202.5, 53.9, -220.5, 55.7, -220.5, 60.7, -232.5, 62.1, -232.5, 68.1, -239.5, 71, -239.5, 71, -257.5, 73, -257.5, 79, -265.5, 81.5, -265.5, 94, -271.7, 94, -267.9, 96.4, -254.5, 93.8, -254.5, 87.1, -247.8, 92, -245.9, 92, -241.4, 90.7, -232.5, 89, -232.5, 82, -222.5, 78.5, -222.5, 78, -222.2, 78, -217.7, 74, -213.7, 74, -206.9, 75.7, -197.5, 78.4, -197.5, 81.9, -188.6, 86.6, -202.5, 88.1, -202.5, 104.2, -217.5, 106.6, -217.5, 110, -218.2, 110, -225.2, 119, -237.5, 121.3, -237.5, 126.7, -241.8, 129, -240.8, 129, -238.9, 131.4, -231.5, 136.8, -231.5, 140, -228.3, 140, -223.8, 129, -208.9, 129, -203.2, 134, -197.2, 134, -195.1, 140, -197.5, 140, -194.7, 142, -193.7, 142, -197.3, 149.2, -204.5, 154.9, -204.5, 161, -206.1, 161, -203.6, 167.4, -207.5, 174.4, -207.5, 194.4, -220.5, 198.1, -220.5, 217, -218.3, 217, -216.3, 220.4, -213, 219.3, -210.5, 217.9, -210.5, 216.1, -208.5, 228, -208.5, 228, -206.3, 231.4, -203, 230.3, -200.5, 229.1, -200.5, 228.5, -199.5, 240, -199.5, 240, -197.9, 248, -194.9, 248, -190.6, 242, -185.6, 242, -184, 238.4, -176.8, 244, -174.9, 244, -169.8, 240, -164.5, 239.1, -164.5, 237.1, -161.5, 232.2, -161.5, 227.8, -161, 235, -157.8, 235, -155, 237.2, -150.5, 238.5, -150.5, 245, -153.7, 245, -156, 249.8, -164.5, 255.5, -164.5, 260, -166.7, 260, -163.2, 264, -158.2, 264, -155.3, 261.5, -145.5, 290, -145.5, 290, -144.5, 294, -144.5, 294, -142.5, 302, -136.5, 302, -133.3, 293.5, -128.5, 284.4, -128.5, 275.4, -134.5, 274.4, -134.5, 264.4, -130.5, 263, -130.5, 263, -129.6, 272, -123.6, 272, -120.7, 267.8, -116.5, 265.3, -116.5, 256, -112.5, 256, -115, 247.6, -117.1, 237.5, -111.5, 227.6, -111.5, 223, -113.5, 213.5, -106.1, 219, -103.9, 219, -99.7, 215.8, -96.5, 213.4, -96.5, 200.4, -91.5, 194.7, -91.5, 190.7, -92.8, 190.5, -91.5, 193.4, -91.5, 211.4, -83.5, 218.4, -88.5, 234, -88.5, 234, -81.5, 238, -81.5, 248.6, -86.5, 258.2, -86.5, 260, -86, 269.2, -94.5, 282, -94.5, 285, -90.5, 290.3, -90.5, 291.7, -90, 302.4, -96.5, 308.4, -96.5, 314, -94.4, 327, -99.3, 327, -96.9, 333, -94.9, 333, -93, 336.2, -86.5, 332.8, -86.5, 320.8, -74.5, 316.5, -74.5, 308.5, -78.5, 303.7, -78.5, 299.2, -70.5, 293.9, -70.5, 281, -71.7, 281, -73.4, 275.6, -76.5, 275.2, -76.1, 280.8, -70.5, 284.1, -70.5, 293, -69.2, 293, -67.3, 305.8, -54.5, 307.1, -54.5, 322, -53.4, 322, -51.5, 330, -45.5, 330, -41.7, 325.8, -37.5, 313, -37.5, 313, -39.4, 310, -41.1, 310, -39.1, 300, -35.7, 300, -38.7, 282, -55.8, 282, -48.5, 279.6, -48.5, 276.1, -46.2, 274, -47.3, 274, -48.3, 268, -51.3, 268, -54.1, 266.4, -61.5, 263.3, -61.5, 253.7, -69.2, 247.9, -62.5, 245.5, -62.5, 239.5, -59.5, 231.6, -59.5, 224.6, -62.3, 227, -52.7, 227, -48.7, 233, -45.8, 233, -42.8, 237.6, -44.5, 242.5, -44.5, 248, -41.7, 248, -40.4, 260, -30.4, 260, -26.7, 256.8, -23.5, 247.8, -23.5, 241, -25, 206, -20.2, 206, -22, 199.8, -23.9, 198.8, -13.5, 195.2, -13.5, 181, -12.3, 181, -13.8, 174.6, -15.1, 171.3, -7.5, 168.4, -7.5, 154.5, -2.29999, 157, -0.600006, 157, 2.29999, 153.8, 5.5, 151.3, 5.5, 141.2, 8.60001, 141.7, 11.5, 148, 12.9, 148, 17.2, 146.5, 19.1, 150.1, 25.5, 152, 25.5, 155, 29.5, 164.4, 29.5, 173, 33.2, 173, 34.8, 178, 41.5, 181.7, 41.5, 186.7, 45.5, 207.2, 45.5, 235.1, 52.5, 248, 50.1, 248, 52.1, 259, 56.1, 259, 57.9, 261.3, 61.4, 260.2, 63.5, 259, 63.5, 258.1, 64.7, 285, 87.6, 285, 93.2, 287.4, 100.5, 294, 106.7, 294, 110, 300, 127.2, 300, 140.8, 298.5, 145.8, 302.4, 156.5, 321.8, 176.5, 323.6, 176.5, 340, 187.4, 340, 191.2, 342.8, 199.5, 339.2, 199.5, 330, 202.2, 330, 199.4, 320, 190.4, 320, 188, 318.6, 184.5, 317.3, 184.5, 314, 181.8, 314, 201.5, 311.5, 201.5, 309.1, 202.7, 311.7, 211.5, 309.5, 211.5, 307.5, 218.5, 305.8, 218.5, 296.5, 227.9, 294, 226.8, 294, 225.2, 290.7, 220.7, 291.8, 218.5, 292.9, 218.5, 295, 215, 295, 213.9, 291.1, 203.5, 293.5, 203.5, 294.6, 199.1, 286.8, 184.5, 285.5, 184.5, 270.9, 177, 273, 178.5, 273, 181, 276.2, 187.5, 272.8, 187.5, 272.4, 187.9, 289, 201.6, 289, 207.6, 287.7, 216.5, 282.6, 216.5, 274, 212.8, 274, 211.6, 259, 201.6, 259, 188.5, 258.2, 188.5, 249.5, 179.8, 244.5, 184.9, 242, 183.8, 242, 182.6, 231, 175.6, 231, 172.2, 228, 168.2, 228, 163.3, 228.5, 161.5, 215, 151.5, 215, 148.5, 213.5, 148.5, 200, 141.7, 200, 140, 198.9, 138.1, 196.4, 145.5, 195.1, 145.5, 193.1, 148.5, 189.5, 148.5, 186, 146.7, 186, 145.4, 178, 138.4, 178, 133.4, 178.3, 130, 175.8, 132.5, 172.5, 132.5, 162, 126.7, 162, 125.2, 154, 116.3, 154, 113.5, 153.5, 111.5, 151.5, 111.5, 142, 106.7, 142, 103.9, 140.3, 99.4, 139.2, 101.5, 134.8, 101.5, 122, 99.2, 122, 97.5, 112, 89.5, 112, 87.5, 110.8, 87.5, 91.2, 83.3, 95, 87.8, 95, 90.3, 90.8, 94.5, 85.3, 94.5, 80.7, 95.9, 88, 101.5, 88, 105.1, 89.6, 112.5, 94.7, 112.5, 110, 124.5, 110, 126.9, 114, 132.9, 114, 136.3, 116.1, 140.5, 124.8, 140.5, 140, 154.6, 140, 157, 143.2, 163.5, 139.2, 163.5, 134.9, 164.7, 147, 174.6, 147, 176.8, 160, 193.8, 160, 197.5, 160.8, 204.7, 168, 207.1, 168, 208.7, 177, 217.7, 177, 221.5, 177.9, 241.5, 188, 253.8, 188, 258.7, 186.5, 264.5, 187.9, 264.5, 194, 271.8, 194, 281.3, 189.8, 285.5, 184, 285.5, 178, 277.1, 178, 269, 176.8, 266.7, 170, 275.5, 166.2, 275.5, 163, 272.3, 163, 268.7, 171, 259.8, 171, 258.5, 170.2, 250.5, 162, 250.5, 162, 245.1, 157, 237.1, 157, 233.4, 157.8, 224.5, 150, 224.5, 150, 222.4, 143, 216.4, 143, 213.8, 135.6, 191.5, 135, 191.5, 130.8, 185.8, 126, 192.5, 125, 192.5, 125, 198.5, 122.5, 198.5, 120, 199.7, 123, 202.7, 123, 211.6, 135, 224.7, 135, 229.5, 136.8, 241.5, 137.4, 241.5, 144, 244.1, 144, 253.6, 141, 255.6, 141, 260.7, 145, 264.7, 145, 283.5, 143, 283.5, 136, 292.5, 133.3, 292.5, 128, 288.5, 128, 285.7, 132.6, 281.1, 127, 276.4, 127, 267.8, 131, 262.8, 131, 260.9, 130.3, 257.5, 118, 246.4, 118, 242.5, 117.2, 235.4, 98.8, 221.4, 96.2, 241.9, 106, 253.8, 106, 255.7, 103.6, 265.5, 101.7, 265.5, 100, 266.6, 100, 267.7, 103, 270.7, 103, 276.7, 101.3, 288, 111, 294.4, 111, 300.5, 109.4, 300.5, 107.4, 305.5, 98.5, 305.5, 95, 303.7, 95, 302.3, 91, 298.3, 91, 296.4, 91.8, 288.2, 81, 282.7, 81, 279.9, 89, 267.8, 89, 265.5, 88.3, 265.5, 85.4, 249, 80, 251.7, 80, 248.1, 75.2, 241.3, 73.4, 246.5, 71.7, 246.5, 67.2, 249.8, 65, 248.7, 65, 247.2, 59, 240.2, 59, 233.7, 56, 223.8, 56, 216.2, 57.5, 211.8, 56.2, 210, 47.4, 217.9, 45, 216.8, 45, 215.1, 40, 207.1, 40, 198.5, 38.8, 184.5, 40.9, 184.5, 44.2, 178.4, 35, 165.5, 32.7, 165.5, 38, 191.3, 38, 194.9, 33.8, 205.9, 35.8, 219.5, 37.1, 219.5, 46, 233.9, 46, 238.9, 42.1, 248.8, 45, 251.7, 45, 263.5, 43.1, 263.5, 41, 267, 41, 271.1, 44.9, 281.5, 42.7, 281.5, 41.3, 289, 49, 295.6, 49, 299.1, 51.4, 311.5, 49.4, 311.5, 47.4, 317.5, 43.3, 317.5, 42, 316.5, 42, 327.5, 39.7, 327.5, 29.3, 335.8, 27, 334.8, 27, 332.9, 22.1, 319.5, 24.3, 319.5, 25.3, 313.5, 27.2, 313.5, 32, 308.7, 32, 304.5, 31.2, 295.5, 23, 285.2, 23, 279.3, 24.4, 272.5, 26.2, 272.5, 30, 268.7, 30, 268, 24, 258.1, 24, 252.1, 27.3, 244.7, 23, 232.9, 23, 229.8, 18.3, 233.9, 16, 232.8, 16, 231, 11, 222, 11, 213, 17.2, 200.7, 13.2, 174.4, 7, 173.1, 7, 168, 5, 164, 5, 161.7, 14.7, 152, 5.29999, 144.1, -2, 152.2, -0.899994, 169.5, -2.89999, 169.5, -8, 177.1, -8, 184.5, -7, 239.5, -9.39999, 239.5, -18.4, 245.5, -23.5, 245.5, -33, 240.7, -33, 239.3, -36, 236.3, -36, 230.5, -35.1, 189, -39, 192.4, -40.3, 201.5, -42.5, 201.5, -54, 207.9, -54, 203.9, -59, 191.5, -56, 191.5, -51.1, 184.5, -56.2, 189.5, -59.8, 189.5, -63, 186.3, -63, 183.6, -56, 177.6, -56, 176.5, -57.3, 166.5, -55.2, 166.5, -52, 160, -52, 156.1, -59, 158.2, -59, 155.6, -62, 153.6, -62, 151.3, -59.7, 138.5, -58, 138.5, -51, 129.5, -47.3, 129.5, -46, 129.1, -46, 124.5, -48.3, 117.5, -49.5, 117.5, -52.5, 127.5, -54.5, 127.5, -66, 135.5, -66, 141.9, -70.6, 153.5, -72.1, 153.5, -84, 166.4, -84, 172.1, -89, 180.1, -85, 189.5, -87.2, 189.5, -88.2, 197.5, -90.2, 197.5, -91, 198.3, -91, 199.5, -87.5, 214.5, -89.9, 214.5, -96.9, 226.5, -99.8, 226.5, -101, 225.3, -101.6, 229.5, -96, 243.5, -99.2, 243.5, -103, 247.3, -103, 248.5, -101.7, 258.5, -103.7, 258.5, -104.9, 260.8, -98, 266.6, -98, 269.2, -96.6, 277.5, -98.9, 277.5, -100.9, 280.5, -105.8, 280.5, -106.6, 279.7, -113.3, 285.5, -120, 285.5, -124, 280.2, -124, 273.3, -117, 269.4, -117, 264.5, -116, 264.5, -116, 259.3, -121.4, 254, -120.3, 251.5, -119.7, 251.5, -115.5, 230.5, -127, 230.5, -127, 225.4, -125.7, 216.5, -123.9, 216.5, -116.9, 208.5, -113.1, 208.5, -111, 208, -111, 206.2, -107, 194.2, -107.9, 188.2, -108.5, 190.5, -110.3, 190.5, -119.3, 197.5, -123.2, 197.5, -125.3, 193.3, -132, 198.5, -132, 203.3, -139, 210.3, -139, 212.1, -135.5, 228.5, -137.9, 228.5, -142.9, 236.5, -145.8, 236.5, -147, 237.3, -147, 238, -141.6, 247.5, -145.3, 247.5, -150, 250.6, -150, 252.8, -144, 260.8, -144, 268.9, -146.6, 275.5, -148.5, 275.5, -155, 278.7, -155, 275.2, -157.7, 271.8, -161.3, 274.5, -168.8, 274.5, -172, 271.3, -172, 261.7, -164.8, 254.5, -161, 254.5, -161, 253.3, -159.5, 246.4, -166, 245.1, -166, 230.5, -164.2, 230.5, -160.2, 222.5, -157.5, 222.5, -155, 221.3, -155, 219.2, -145.5, 183.5, -143.8, 183.5, -135.8, 175.5, -132.4, 175.5, -129, 174.8, -117, 159.5, -115, 159.5, -111, 154.5, -108.6, 154.5, -99, 149.2, -89, 138.7, -89, 137.3, -86.7, 124.5, -84.9, 124.5, -74.1, 114.7, -77, 107.5, -74.4, 107.5, -71.4, 98.5, -69.7, 98.5, -65, 94.6, -65, 92.4, -66.9, 95.5, -69.7, 95.5, -71.7, 94, -81.1, 104.5, -84.2, 104.5, -91, 103.1, -91, 98.5, -92.3, 89.5, -90.2, 89.5, -80.6, 72, -90, 70.1, -90, 64, -86, 56, -102, 51, -102, 49.3, -115, 36.3, -115, 33.5, -112.3, 31.5, -114.9, 31.5, -135, 32.6, -135, 30.7, -145.1, 25.3, -153.3, 31.5, -156.7, 31.5, -165, 34.3, -165, 31, -166.6, 27.9, -177, 31.9, -177, 35.2, -187.1, 47.5, -190.8, 47.5, -200, 50.2, -200, 33.5, -197.7, 33.5, -190, 27.5, -192.3, 23.6, -191.2, 21.5, -189.5, 21.5, -182.5, 16.6, -192, 14, -192, 9.70001, -186.2, 3.20001, -198.3, -0.5, -217, -0.5, -217, 0.5, -222.8, 4.79999, -225, 3.70001, -225, 2, -229.3, -6.5, -232.7, -6.5, -252.7, -23.5, -254.5, -23.5, -261.5, -19.5, -271.5, -19.5, -275.9, -21.7, -287, -18.9, -287, -21.5, -288.7, -22.9, -301.3, -13.5, -303.1, -13.5, -313, -14.7, -313, -17.1, -313.7, -20.5, -319, -19.7, -319, -18.5, -324.3, -18.5, -335.1, -5.5, -341.8, -5.5, -345, -8.70001, -345, -13.2, -335, -26.5, -331, -26.5, -329.6, -33.5, -325.1, -33.5, -318, -35.4, -329, -36.7, -329, -38.8, -334, -44.8, -334, -47.3, -329.8, -51.5, -319.2, -51.5, -312.2, -44.5, -297.2, -44.5, -295.2, -48.5, -290.2, -48.5, -280, -49.8, -280, -47.6, -269.4, -40.5, -265.6, -40.5, -258.7, -37.5, -257.1, -37.5, -241, -38.6, -241, -36.4, -231.3, -27.5, -227.7, -27.5, -227, -27.3, -227, -29.1, -219.1, -41.5, -217.7, -41.5, -207.7, -49.5, -198.6, -49.5, -188.6, -45.5, -185.4, -45.5, -174, -48, -174, -46.1, -168.5, -44.9, -166.4, -46.1, -172.8, -52.5, -190, -52.5, -190, -54.5, -198.7, -61.5, -203.2, -61.5, -209, -62.9, -209, -64.5, -217.7, -71.5, -236, -71.5, -236, -73.7, -238.8, -76.5, -242, -76.5, -257, -73, -257, -74.7, -266, -75.7, -266, -77.8, -267.1, -79.5, -278.2, -69.5, -282.4, -69.5, -285.4, -67.5, -289.8, -67.5, -290.8, -78.2, -295, -77, -295, -75.8, -302, -66.5, -304.9, -66.5, -311, -64.9, -311, -68, -313.3, -72.7, -316.3, -70.5, -320, -70.5, -325, -76.8, -325, -79.1, -320.8, -85.5, -324.6, -85.5, -335.6, -81.5, -352, -81.5, -352, -83, -360, -84.9, -360, -86.9, -362.3, -90.4, -361.2, -92.5, -359.9, -92.5, -353.9, -99.5, -339, -99.5, -330.4, -103.5, -319.4, -103.5, -311.6, -98.7, -301.8, -108.5, -295.5, -108.5, -292.6, -110.3, -295.8, -113.5, -296.8, -113.5, -312, -112.3, -312, -115.5, -313.6, -121.5, -310.9, -121.5, -305, -128.7, -316, -129.7, -316, -131.7, -321, -136.7, -321, -141.9, -306, -147.4, -306, -144.6, -299.2, -140.5, -297.9, -142.6, -302.8, -147.5, -319, -147.5, -319, -149.6, -326.4, -155.9, -325.4, -158.5, -323.6, -158.5, -317.6, -162.5, -313.8, -162.5, -317, -165.7, -317, -169.3, -311.8, -174.5, -309.2, -174.5, -300, -177.2, -300, -174.7, -297.1, -173.3, -285, -176, -280.8, -179.5, -288, -179.5, -288, -181.3, -296, -185.3, -296, -188.4, -286.8, -196.5, -283.9, -196.5, -273, -195.7, -273, -200.5, -270, -200.5, -270, -203.7, -279, -210.5, -279, -213.2, -282, -220.1, -282, -225.3, -278.8, -228.5, -275.5, -228.5, -263.5, -222.5, -262.6, -222.5, -259.1, -224.8, -257, -223.7, -257, -222.7, -243, -215.7, -243, -214.1, -237.9, -206.5, -233.6, -206.5, -224.6, -202.5, -217.4, -202.5, -210.2, -203.9, -216, -209.7, -216, -211.5, -216.9, -222.5, -217.8, -222.5, -229, -232.6, -229, -237.1, -228.4, -238, -229.8, -240.1, -233.3, -237.5, -235.2, -237.5, -242, -238.9, -242, -240.8, -246, -245.8, -246, -248.5, -252.7, -248.5, -267, -259.5, -267, -262.9, -262, -264.9, -262, -268.3, -258.8, -271.5, -254.8, -271.5, -247, -270.2, -247, -268.2, -240, -260.1, -240, -261.3, -236.8, -264.5, -227, -264.5, -227, -265.2, -234, -268.2, -234, -269.5, -238, -272.5, -238, -275.7, -231, -279.6, -235.3, -285.2, -234.3, -287.5, -232.2, -287.5, -219, -288.7, -219, -286.5, -208.3, -278.5, -195.7, -278.5, -186.6, -276, -185.7, -278.1, -187.7, -287.5, -189.8, -287.5, -199, -296.7, -199, -300.5, -201.6, -310.5, -198.8, -310.5, -195.5, -313.9, -193, -312.8, -193, -312, -189, -311, -189, -312.3, -178.6, -323.9, -176, -322.9, -176, -321.1, -171, -314.1, -171, -304.2, -172.5, -299.8, -167, -292.1, -167, -283.7, -165, -282.8, -165, -281.5, -158, -276.5, -158, -274.2, -155, -270.5, -155, -272.1, -162.1, -287.5, -159.1, -287.5, -157.1, -290.5, -150.8, -290.5, -151, -295.3, -150.1, -296.2, -155.2, -306.5, -151.3, -306.5, -145.7, -308.2, -157, -318.6, -157, -322.9, -163, -331.9, -163, -335.2, -165.8, -343.5, -163.6, -343.5, -161.6, -352.5, -159.6, -352.5, -156.1, -354.8, -154, -353.7, -154, -352.9, -148, -350.9, -148, -349.3, -127, -323.5, -123.3, -323.5, -110.1, -313.6, -110.7, -315.5, -108.2, -315.5, -105.7, -320.5, -111, -326.8, -111, -337.5, -108.4, -337.5, -105, -338.2, -105, -338.8, -108, -342.8, -108, -356.7, -106, -357.7, -106, -360.5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[connection signal="timeout" from="Apples/1/Timer" to="." method="unCollectApple" binds= [ 1 ]]
[connection signal="timeout" from="Apples/2/Timer" to="." method="unCollectApple" binds= [ 2 ]]
[connection signal="timeout" from="Apples/3/Timer" to="." method="unCollectApple" binds= [ 3 ]]
[connection signal="timeout" from="Apples/4/Timer" to="." method="unCollectApple" binds= [ 4 ]]
[connection signal="timeout" from="Apples/5/Timer" to="." method="unCollectApple" binds= [ 5 ]]
[connection signal="timeout" from="Apples/6/Timer" to="." method="unCollectApple" binds= [ 6 ]]
[connection signal="timeout" from="Apples/7/Timer" to="." method="unCollectApple" binds= [ 7 ]]
[connection signal="body_entered" from="Area2D" to="." method="playerEnter"]
[connection signal="body_exited" from="Area2D" to="." method="playerExit"]
